traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:4: error: an expression of type Null is ineligible for implicit conversion
  var murAuNord:Boolean = null
                          ^Snake:4: error: type mismatch;
 found   : Null(null)
 required: Boolean
  var murAuNord:Boolean = null
                          ^Snake:13: warning: enclosing method positionFinale has result type Unit: return value discarded
  return (murDevant && murAuNord)
  ^Snake:38: error: value unary_! is not a member of Unit
  while (!positionFinale()) {
         ^